# livestock-rs

./: Cargo.toml  LICENSE  README.md
.github/: FUNDING.yml
.github/workflows/: ci.yml
src/: camel.rs  cattle.rs  chicken.rs  donkey.rs  goat.rs  horse.rs  lib.rs  reindeer.rs  sheep.rs  swine.rs  types.rs
src/breeds/: camel.rs  cattle.rs  chicken.rs  donkey.rs  goat.rs  horse.rs  mod.rs  reindeer.rs  sheep.rs  swine.rs
src/calculators/: mod.rs
src/calculators/feed/: efficiency.rs  fcr.rs  mod.rs
src/calculators/growth/: adg.rs  mod.rs
