[package]
name = "livestock-rs"
version = "0.10.0"
edition = "2021"
authors = ["Jaken Herman <jaken@rowanranch.com>"]
license = "MIT"
description = "A comprehensive library and CLI tool for managing, identifying, and working with livestock breeds, growth rates, and health. Designed to support farming and ranching applications, breed registries, and livestock data processing."
repository = "https://github.com/rowan-ranch/livestock-rs"
keywords = ["livestock", "farming", "ranching", "agriculture", "agritech"]
categories = ["data-structures"]
readme = "README.md"
publish = true

[dependencies]
Inflector = "0.11.4"
anyhow = "1.0.95"
clap = { version = "~4.1", features = ["derive", "cargo", "env", "wrap_help"] }
serde = { version = "1.0.217", features=["derive"] }

[badges]
github-actions = { repository = "rowan-ranch/livestock-rs", status = "main" }
crates-io = { text = "livestock-rs", url = "https://crates.io/crates/livestock_rs" }

[package.metadata]
company = { name = "Rowan Ranch Pasture & Pen, LLC", url = "https://rowanranch.com", email = "jaken@rowanranch.com" }
project_team = ["Jaken Herman", "Brooklyn Herman"]
support = { issue_tracker = "https://github.com/rowan-ranch/livestock-rs/issues" }

[lib]
crate-type = ["lib"]
